# mlops_project

./: README.md  pyproject.toml
01-intro/: duration_prediction.ipynb  test.ipynb
01-intro/.ipynb_checkpoints/: duration_prediction-checkpoint.ipynb  test-checkpoint.ipynb
